Added more RDS instance attributes to be returned in the response for monitoring ease.
